--- a/.github/workflows/test-components.yml
+++ b/.github/workflows/test-components.yml
@@ -50,7 +50,8 @@ jobs:
             # Run all sessions without any exclusions
             echo "[]" > gh-exclude-test-sessions.json
           fi
-          # Combine with other exclusions (if needed). Example: $ echo '[{"nox-session": "test_foo"}]' > static-exclude.json
+          # If needed, combine dynamically generated array of exclusions with other static exclusions.
+          # Example: $ echo '[{"nox-session": "test_foo"}]' > static-exclude.json
           echo '[]' > static-exclude.json
           jq -s 'add' static-exclude.json gh-exclude-test-sessions.json > all-exclusions.json
           # Output the final exclusions for the test sessions
