Fix more bugs and improve comments

--- a/.github/workflows/test-components.yml
+++ b/.github/workflows/test-components.yml
@@ -50,9 +50,11 @@ jobs:
             # Run all sessions without any exclusions
             echo "[]" > gh-exclude-test-sessions.json
           fi
-          # If needed, combine dynamically generated array of exclusions with other static exclusions.
+          # We add a fake item which doesn't match any session to the list to make sure
+          # it is not empty. If needed, more static exclusions can be added here and 
+          # they will be combined with dynamically generated array of exclusions.
           # Example: $ echo '[{"nox-session": "test_foo"}]' > static-exclude.json
-          echo '['not-existing-factor']' > static-exclude.json
+          echo '["not-existing-factor"]' > static-exclude.json
           jq -s 'add' static-exclude.json gh-exclude-test-sessions.json > all-exclusions.json
           # Output the final exclusions for the test sessions
           echo 'test-sessions-exclusions<<EOF' >> $GITHUB_OUTPUT
