--- a/pyproject.toml
+++ b/pyproject.toml
@@ -126,6 +126,7 @@ keywords = [
   'hpc'
 ]
 license = 'BSD-3-Clause'
+license-files = ['LICENSE']
 name = 'gt4py'
 readme = 'README.md'
 requires-python = '>=3.10, <3.14'
