--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -57,23 +57,17 @@ jobs:
         with:
           xcode-version: latest-stable
 
-      - name: Install gcc (with OpenMP) for macos
-        if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module == 'cartesian') }}
-        run: |
-          brew install gcc@14
-          gcc-14 --version
-          echo "CC=gcc-14" >> $GITHUB_ENV
-          echo "CXX=g++-14" >> $GITHUB_ENV
-          echo "SDKROOT=$(xcrun --show-sdk-path)" >> $GITHUB_ENV
-
-      - name: Install libomp for macos clang
-        if: ${{ (matrix.os == 'macos-15') && (matrix.gt4py-module != 'cartesian') }}
+      - name: Configure OpenMP for macos clang
+        if: ${{ matrix.os == 'macos-15' }}
         run: |
           gcc --version
           echo "CC=gcc" >> $GITHUB_ENV
           echo "CXX=g++" >> $GITHUB_ENV
           brew install libomp
           echo "CMAKE_PREFIX_PATH=$(brew --prefix libomp)" >> $GITHUB_ENV
+          echo "CXXFLAGS=-Wno-missing-template-arg-list-after-template-kw" >> $GITHUB_ENV
+          echo "OPENMP_CPPFLAGS=-Xclang -fopenmp -Xclang -I$(brew --prefix libomp)/include" >> $GITHUB_ENV
+          echo "OPENMP_LDFLAGS=-Xclang -fopenmp $(brew --prefix libomp)/lib/libomp.dylib" >> $GITHUB_ENV
 
       - name: Run CPU tests for '${{ matrix.gt4py-module }}' with '${{ matrix.dependencies-strategy }}' resolution strategy
         env:
