--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -33,11 +33,11 @@ jobs:
         # between the different compatible versions for a given package requirement
         # [arg: --resolution, env: UV_RESOLUTION=]
         dependencies-strategy: ["lowest-direct", "highest"]
-        gt4py-module: ["cartesian", "eve", "next", "storage"]
+        gt4py-module: ["cartesian"]
         # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
         #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
-        os: ["ubuntu-latest", "macos-15"]
-        python-version: ${{ fromJSON(needs.get-python-versions.outputs.python-versions) }}
+        os: ["macos-15"]
+        python-version: ["3.10"]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
