--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -33,7 +33,7 @@ jobs:
         # between the different compatible versions for a given package requirement
         # [arg: --resolution, env: UV_RESOLUTION=]
         dependencies-strategy: ["lowest-direct", "highest"]
-        gt4py-module: ["cartesian"]
+        gt4py-module: ["cartesian", "next"]
         # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
         #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
         os: ["macos-15"]
