--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -33,10 +33,10 @@ jobs:
         # between the different compatible versions for a given package requirement
         # [arg: --resolution, env: UV_RESOLUTION=]
         dependencies-strategy: ["lowest-direct", "highest"]
-        gt4py-module: ["cartesian", "next"]
+        gt4py-module: ["cartesian", "eve", "next", "storage"]
         # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
         #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
-        os: ["macos-15"]
+        os: ["ubuntu-latest", "macos-15"]
         python-version: ${{ fromJSON(needs.get-python-versions.outputs.python-versions) }}
       fail-fast: false
 
@@ -61,7 +61,7 @@ jobs:
         if: ${{ matrix.os == 'macos-15' }}
         # Note that the compiler flag 'CXXFLAGS=-Wno-missing-template-arg-list-after-template-kw'
         # is only needed in cartesian dace backend. For next, a proper fix has been merged
-        # to dace main branch, see https://github.com/spcl/dace/pull/2084"
+        # to dace main branch, see https://github.com/spcl/dace/pull/2084
         run: |
           gcc --version
           echo "CC=gcc" >> $GITHUB_ENV
