switch to mi300

--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -137,3 +137,4 @@ test_cscs_amd_rocm:
     GT4PY_BUILD_JOBS: 8
     # Limit test parallelism to avoid "OSError: too many open files" in the gt4py build stage.
     PYTEST_XDIST_AUTO_NUM_WORKERS: 32
+    SLURM_PARTITION: mi300
