--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -142,4 +142,8 @@ test_cscs_amd_rocm:
     CMAKE_PREFIX_PATH: /opt/rocm # for next
     CXX: /opt/rocm/bin/hipcc
     CUDA_HOME: /opt/rocm # for cartesian
-    # CUDA_ARCH: gfx942 # MI300A
+    CUDA_ARCH: gfx942 # MI300A
+  rules:
+    - if: $SUBPACKAGE == 'cartesian' && $VARIANT == 'dace' && $SUBVARIANT == 'rocm6_0'
+      when: never
+    - when: on_success
