re-enable santis

--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -67,12 +67,11 @@ stages:
     EXTRA_UV_ENV_VARS: "CUPY_INSTALL_USE_HIP=1 HCC_AMDGPU_TARGET=gfx942 ROCM_HOME=/opt/rocm"
     UBUNTU_VERSION: '22.04'
 
-# TODO(havogt): re-enable once santis is back
-# build_cscs_gh200:
-#   extends:
-#     - .container-builder-cscs-gh200
-#     - .build_common
-#     - .build_extra_cuda
+build_cscs_gh200:
+  extends:
+    - .container-builder-cscs-gh200
+    - .build_common
+    - .build_extra_cuda
 
 build_cscs_amd_rocm:
   extends:
@@ -120,15 +119,14 @@ build_cscs_amd_rocm:
     - export NOX_SESSION_ARGS="${VARIANT:+($VARIANT}${SUBVARIANT:+, $SUBVARIANT}${DETAIL:+, $DETAIL}${VARIANT:+)}"
     - cd "${WORKDIR}/gt4py" && uv run --script noxfile.py -s "test_${SUBPACKAGE}-${PY_VERSION}${NOX_SESSION_ARGS}"
 
-# TODO(havogt): re-enable once santis is back
-# test_cscs_gh200:
-#   extends:
-#     - .container-runner-santis-gh200
-#     - .test_common
-#   variables:
-#     GT4PY_BUILD_JOBS: 8
-#     # Limit test parallelism to avoid "OSError: too many open files" in the gt4py build stage.
-#     PYTEST_XDIST_AUTO_NUM_WORKERS: 32
+test_cscs_gh200:
+  extends:
+    - .container-runner-santis-gh200
+    - .test_common
+  variables:
+    GT4PY_BUILD_JOBS: 8
+    # Limit test parallelism to avoid "OSError: too many open files" in the gt4py build stage.
+    PYTEST_XDIST_AUTO_NUM_WORKERS: 32
 
 test_cscs_amd_rocm:
   extends:
