--- a/.github/workflows/_disabled/gt4py-sphinx.yml
+++ b/.github/workflows/_disabled/gt4py-sphinx.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           python -m pip install .[dace]
       - name: Build documentation
-          # TODO re-enable SPHINXOPTS=-W
+          # TODO(): re-enable SPHINXOPTS=-W
         run: |
           cd docs && make -e html
