--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -93,25 +93,25 @@ build_cscs_amd_rocm:
   parallel:
     matrix:
       - SUBPACKAGE: [cartesian]
-        VARIANT: ["internal", "dace"]
-        SUBVARIANT: ["cuda12", "rocm6_0", "cpu"]
+        VARIANT: ['internal', 'dace']
+        SUBVARIANT: ['cuda12', 'rocm6_0', 'cpu']
         PY_VERSION: *test_python_versions
       - SUBPACKAGE: eve
         PY_VERSION: *test_python_versions
       - SUBPACKAGE: next
-        VARIANT: ["internal", "dace"]
-        SUBVARIANT: ["cuda12", "rocm6_0", "cpu"]
+        VARIANT: ['internal', 'dace']
+        SUBVARIANT: ['cuda12', 'rocm6_0', 'cpu']
         DETAIL: ["nomesh", "atlas"]
         PY_VERSION: *test_python_versions
       - SUBPACKAGE: [storage]
-        VARIANT: ["cuda12", "rocm6_0", "cpu"]
+        VARIANT: ['cuda12', 'rocm6_0', 'cpu']
         PY_VERSION: *test_python_versions
   rules: &exclude_variants_rules
-    - if: '(($SUBVARIANT == "cpu" || ($SUBVARIANT == "" && $VARIANT == "cpu")) && " $TEST_VARIANTS " !~ " cpu "'
+    - if: (($SUBVARIANT == 'cpu' || ($SUBVARIANT == "" && $VARIANT == 'cpu')) && " $TEST_VARIANTS " !~ " cpu "
       when: never
-    - if: '(($SUBVARIANT == "cuda12" || ($SUBVARIANT == "" && $VARIANT == "cuda12")) && " $TEST_VARIANTS " !~ " cuda12 "'
+    - if: (($SUBVARIANT == 'cuda12' || ($SUBVARIANT == "" && $VARIANT == 'cuda12')) && " $TEST_VARIANTS " !~ " cuda12 "
       when: never
-    - if: '(($SUBVARIANT == "rocm_6" || ($SUBVARIANT == "" && $VARIANT == "rocm_6")) && " $TEST_VARIANTS " !~ " rocm_6 "'
+    - if: (($SUBVARIANT == 'rocm_6' || ($SUBVARIANT == "" && $VARIANT == 'rocm_6')) && " $TEST_VARIANTS " !~ " rocm_6 "
       when: never
     - if: $SUBPACKAGE == 'next' && $VARIANT == 'dace' && $DETAIL == 'nomesh'
       variables:
