--- a/ci/cscs-ci.yml
+++ b/ci/cscs-ci.yml
@@ -163,6 +163,8 @@ test_cscs_amd_rocm:
     SLURM_TIMELIMIT: 20 # relaxed relative to santis as there is no pressure on the queue
   rules:
     - *exclude_variants_rules
+    - if: $VARIANT == 'dace' && $SUBVARIANT == 'rocm6_0'
+      when: never
     - if: $SUBPACKAGE == 'cartesian' && $VARIANT == 'internal' && $SUBVARIANT == 'cpu'
       variables:
         CXX: g++
