ci: Add beverin (AMD MI300) (#2219)
Additional changes:
- Noxfile parametrizations have been refactored
- Cartesian:
- `CUDA_ARCH` environment flag can be used for the AMD gpu architecture
as well
  - fixes field allocation in some tests
- skip tests that are testing np/cp arrays as fields (as they don't have
the custom `__hip_array_interface__`)
- Next: hard-codes `gfx942` (MI300A instead of MI250X), will be
generalized in a next PR

DaCe tests are skipped for now on AMD.

---------

Co-authored-by: Enrique Gonzalez Paredes <enriqueg@cscs.ch>

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -57,15 +57,15 @@ ARG EXTRA_UV_PIP_ARGS=""
 ARG EXTRA_UV_SYNC_ARGS=""
 RUN --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml <<EOF
+set -eu
 if [ ! -z "${EXTRA_UV_ENV_VARS}" ]; then
     eval "export ${EXTRA_UV_ENV_VARS}"
 fi
 uv pip install --compile-bytecode setuptools wheel pip
 uv sync --compile-bytecode --frozen --no-install-project \
     --group dev \
-    --extra formatting \
+    --extra standard \
     --extra jax \
-    --extra performance \
     --extra testing \
     ${EXTRA_UV_SYNC_ARGS}
 if [ ! -z "${EXTRA_UV_PIP_ARGS}" ]; then
