--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -34,9 +34,7 @@ jobs:
         # [arg: --resolution, env: UV_RESOLUTION=]
         dependencies-strategy: ["lowest-direct", "highest"]
         gt4py-module: ["cartesian", "eve", "next", "storage"]
-        # TODO: switch to macos-latest once macos-15 is default, see https://github.com/actions/runner-images/issues/12520
-        #   On macos-14 we see the error: call to 'isfinite' is ambiguous.
-        os: ["ubuntu-latest", "macos-15"]
+        os: ["ubuntu-latest", "macos-latest"]
         python-version: ${{ fromJSON(needs.get-python-versions.outputs.python-versions) }}
       fail-fast: false
 
@@ -51,14 +49,8 @@ jobs:
           cache-dependency-glob: "uv.lock"
           python-version: ${{ matrix.python-version }}
 
-      - name: Install latest-stable xcode for macos
-        if: ${{ matrix.os == 'macos-15' }}
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: latest-stable
-
       - name: Configure OpenMP for macos clang
-        if: ${{ matrix.os == 'macos-15' }}
+        if: ${{ matrix.os == 'macos-latest' }}
         # Note that the compiler flag 'CXXFLAGS=-Wno-missing-template-arg-list-after-template-kw'
         # is only needed in cartesian dace backend. For next, a proper fix has been merged
         # to dace main branch, see https://github.com/spcl/dace/pull/2084
