--- a/pyproject.toml
+++ b/pyproject.toml
@@ -455,7 +455,7 @@ url = 'https://test.pypi.org/simple'
 atlas4py = {index = "test.pypi"}
 dace = [
   {git = "https://github.com/GridTools/dace", branch = "romanc/stree-roundtrip", group = "dace-cartesian"},
-  {git = "https://github.com/philip-paul-mueller/dace", branch = "thread_safe_configuration", group = "dace-next"}
+  {git = "https://github.com/GridTools/dace", tag = "__gt4py-next-integration_2025_09_18", group = "dace-next"}
 ]
 
 # -- versioningit --
